--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,6 @@
+body {
+  background: rgba(0, 0, 0, 0.65);
+}
 footer {
   position: fixed;
   bottom: 5px;
@@ -15,7 +18,7 @@ img {
   margin-bottom: 50px;
 }
 .footerbox {
-  background: rgba(15, 0, 204, 0.65);;
+  background: rgba(15, 0, 204, 0.65);
   border: 2px solid black;
   border-radius: 15px;
 }
