--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 body {
-  background: rgba(0, 0, 0, 0.65);
+  background-image: url(http://i.imgur.com/pa4JZb7.jpg);
+  background-size: contain;
 }
 footer {
   position: fixed;
@@ -21,4 +22,7 @@ img {
   background: rgba(15, 0, 204, 0.65);
   border: 2px solid black;
   border-radius: 15px;
+}
+.card {
+  border: 5px;
 }
